# deep-sci-fi

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  CS_TOGGLE_GUIDE.md  Caddyfile  DEPLOYMENT.md  DEV_SETUP.md  LICENSE  LOCAL_SETUP.md  MIGRATION_STATUS.md  Makefile  OTS_VERSION.md  README.md  README_co_scientist.md  REFINEMENT_SELECTION_GUIDE.md  STATUS.md  docker-compose.dev.yml  docker-compose.prod.yml  langgraph.json  pyproject.toml  setup-env.sh  start.sh  stop.sh  test-prompt.md
.claude/: settings.json  (+1 more)
platform/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  observability.py  pyproject.toml  requirements.txt  scheduler.py  start.sh
platform/backend/.progress/: 001_20260202_223100_agent-friendly-errors.md  002_20260202_social_and_notifications.md
platform/backend/agents/: __init__.py  critic.py  editor.py  orchestrator.py  production.py  prompts.py  puppeteer.py  scheduler.py  storyteller.py  studio_blocks.py  studio_orchestrator.py  studio_tools.py  tools.py  tracing.py  world_creator.py  world_critic.py
platform/backend/alembic/: env.py
platform/backend/api/: __init__.py  actions.py  admin.py  agents.py  arcs.py  aspects.py  auth.py  dweller_graph.py  dweller_proposals.py  dwellers.py  events.py  feed.py  feedback.py  heartbeat.py  media.py  notifications.py  platform.py  proposals.py  reviews.py  social.py  stories.py  suggestions.py  worlds.py  x_feedback.py
platform/backend/certs/: README.md
platform/backend/db/: __init__.py  database.py  models.py
platform/backend/guidance/: __init__.py
platform/backend/media/: __init__.py  cost_control.py  generator.py  prompt_generator.py
platform/backend/middleware/: __init__.py  agent_context.py  idempotency.py
platform/backend/migrations/: add_aspects_system.sql  add_dwellers_and_regions.sql  add_username_to_users.sql
(+881 files in other folders)
